# FastAPI-with-SQLModel-

./: .env  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: auth.py  db.py  main.py  model.py  settings.py
app/router/: user.py
tests/: test_main.py
todo/: auth.py  db.py  main.py  model.py  settings.py  todo.proto
todo/router/: user.py
