[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.1.19"}
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pytest = "^8.2.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bycrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiokafka = "^0.10.0"
protobuf = "^5.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
